test/res/error/cd9_cmp2.tmp
bash: line 1: cd: OLDPWD not set
bash: line 3: cd: OLDPWD not set
